back to ED from WD2; now on latest OWL file and added inverses section

--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -111,6 +111,9 @@
       <a href="#involved">prov:involved</a>
     </li>
     <li class="object-property">
+      <a href="#involvee">prov:involvee</a>
+    </li>
+    <li class="object-property">
       <a href="#qualifiedAssociation">prov:qualifiedAssociation</a>
     </li>
     <li class="object-property">
@@ -151,6 +154,9 @@
     </li>
     <li class="object-property">
       <a href="#qualifiedUsage">prov:qualifiedUsage</a>
+    </li>
+    <li class="object-property">
+      <a href="#wasApprovedBy">prov:wasApprovedBy</a>
     </li>
   </ul>
 </div>
