--- a/components/services/prov-o/includes/at-a-glance-starting-point.html
+++ b/components/services/prov-o/includes/at-a-glance-starting-point.html
@@ -24,6 +24,12 @@
       <a href="#endedAtTime">prov:endedAtTime</a>
     </li>
     <li class="datatype-property">
+      <a href="#generatedAtTime">prov:generatedAtTime</a>
+    </li>
+    <li class="datatype-property">
+      <a href="#invalidatedAtTime">prov:invalidatedAtTime</a>
+    </li>
+    <li class="datatype-property">
       <a href="#startedAtTime">prov:startedAtTime</a>
     </li>
     <li class="object-property">
@@ -43,6 +49,9 @@
     </li>
     <li class="object-property">
       <a href="#wasInformedBy">prov:wasInformedBy</a>
+    </li>
+    <li class="object-property">
+      <a href="#wasInvalidatedBy">prov:wasInvalidatedBy</a>
     </li>
     <li class="object-property">
       <a href="#wasStartedByActivity">prov:wasStartedByActivity</a>
