--- a/components/services/prov-o/includes/inverse-names.html
+++ b/components/services/prov-o/includes/inverse-names.html
@@ -5,11 +5,227 @@
     <th>Recommended inverse name</th>
   </tr>
   <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedRevision" href="#qualifiedRevision" class="owlproperty">prov:qualifiedRevision</a></td>
+    <td>prov:revisedEntity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#atLocation" href="#atLocation" class="owlproperty">prov:atLocation</a></td>
+    <td>prov:locationOf</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage" class="owlproperty">prov:qualifiedUsage</a></td>
+    <td>prov:consumingActivity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration" class="owlproperty">prov:hadGeneration</a></td>
+    <td>prov:generatedAsDerivation</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource" class="owlproperty">prov:hadOriginalSource</a></td>
+    <td>prov:wasOriginalSourceOf</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
+    <td>prov:activityInvolvement</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlproperty">prov:wasInformedBy</a></td>
+    <td>prov:informed</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation" class="owlproperty">prov:qualifiedAssociation</a></td>
+    <td>prov:associatedActivity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedInsertion" href="#qualifiedInsertion" class="owlproperty">prov:qualifiedInsertion</a></td>
+    <td>prov:insertedToDictionary</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hasAnnotation" href="#hasAnnotation" class="owlproperty">prov:hasAnnotation</a></td>
+    <td>prov:annotates</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole" class="owlproperty">prov:hadRole</a></td>
+    <td>prov:wasRoleIn</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#member" href="#member" class="owlproperty">prov:member</a></td>
+    <td>prov:inMembership</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#generated" href="#generated" class="owlproperty">prov:generated</a></td>
+    <td>prov:wasGeneratedBy</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo" class="owlproperty">prov:wasAttributedTo</a></td>
+    <td>prov:contributed</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadQuoter" href="#hadQuoter" class="owlproperty">prov:hadQuoter</a></td>
+    <td>prov:wasQuotingIn</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd" class="owlproperty">prov:qualifiedEnd</a></td>
+    <td>prov:endedActivity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#involvee" href="#involvee" class="owlproperty">prov:involvee</a></td>
+    <td>prov:involvement</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadPlan" href="#hadPlan" class="owlproperty">prov:hadPlan</a></td>
+    <td>prov:wasPlanFor</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom" class="owlproperty">prov:wasQuotedFrom</a></td>
+    <td>prov:wasQuotedBy</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedResponsibility" href="#qualifiedResponsibility" class="owlproperty">prov:qualifiedResponsibility</a></td>
+    <td>prov:responsibleAgent</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf" class="owlproperty">prov:wasRevisionOf</a></td>
+    <td>prov:hadRevision</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
+    <td>prov:entityInvolvement</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#specializationOf" href="#specializationOf" class="owlproperty">prov:specializationOf</a></td>
+    <td>prov:generalizationOf</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#inserted" href="#inserted" class="owlproperty">prov:inserted</a></td>
+    <td>prov:wasInsertedBy</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication" class="owlproperty">prov:qualifiedCommunication</a></td>
+    <td>prov:informedActivity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlproperty">prov:wasAssociatedWith</a></td>
+    <td>prov:wasAssociateFor</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#derivedByInsertionFrom" href="#derivedByInsertionFrom" class="owlproperty">prov:derivedByInsertionFrom</a></td>
+    <td>prov:hadDerivationByInsertion</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#value" href="#value" class="owlproperty">prov:value</a></td>
+    <td>prov:valueOf</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedStartByActivity" href="#qualifiedStartByActivity" class="owlproperty">prov:qualifiedStartByActivity</a></td>
+    <td>prov:activityStartedActivity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlproperty">prov:wasGeneratedBy</a></td>
+    <td>prov:generated</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadQuoted" href="#hadQuoted" class="owlproperty">prov:hadQuoted</a></td>
+    <td>prov:wasQuotedIn</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedDerivation" href="#qualifiedDerivation" class="owlproperty">prov:qualifiedDerivation</a></td>
+    <td>prov:derivedEntity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedTrace" href="#qualifiedTrace" class="owlproperty">prov:qualifiedTrace</a></td>
+    <td>prov:tracedEntity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlproperty">prov:actedOnBehalfOf</a></td>
+    <td>prov:responsibleFor</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedSource" href="#qualifiedSource" class="owlproperty">prov:qualifiedSource</a></td>
+    <td>prov:sourcingEntity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart" class="owlproperty">prov:qualifiedStart</a></td>
+    <td>prov:startedActivity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
+    <td>prov:agentInvolvement</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedQuotation" href="#qualifiedQuotation" class="owlproperty">prov:qualifiedQuotation</a></td>
+    <td>prov:quotedByEntity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasApprovedBy" href="#wasApprovedBy" class="owlproperty">prov:wasApprovedBy</a></td>
+    <td>prov:approvedRevision</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#dictionary" href="#dictionary" class="owlproperty">prov:dictionary</a></td>
+    <td>prov:dictionaryInvolvement</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#alternateOf" href="#alternateOf" class="owlproperty">prov:alternateOf</a></td>
+    <td>prov:alternateOf</td>
+  </tr>
+  <tr>
     <td><a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom" class="owlproperty">prov:wasDerivedFrom</a></td>
     <td>prov:hadDerivation</td>
   </tr>
   <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage" class="owlproperty">prov:hadUsage</a></td>
+    <td>prov:wasUsedInDerivation</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlproperty">prov:wasInvalidatedBy</a></td>
+    <td>prov:invalidated</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlproperty">prov:tracedTo</a></td>
+    <td>prov:tracedFrom</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration" class="owlproperty">prov:qualifiedGeneration</a></td>
+    <td>prov:generatedEntity</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlproperty">prov:wasEndedBy</a></td>
+    <td>prov:ended</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedRemoval" href="#qualifiedRemoval" class="owlproperty">prov:qualifiedRemoval</a></td>
+    <td>prov:removedFromDictionary</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#derivedByRemovalFrom" href="#derivedByRemovalFrom" class="owlproperty">prov:derivedByRemovalFrom</a></td>
+    <td>prov:hadDerivationByRemoval</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#membership" href="#membership" class="owlproperty">prov:membership</a></td>
+    <td>prov:membershipOf</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution" class="owlproperty">prov:qualifiedAttribution</a></td>
+    <td>prov:attributedEntity</td>
+  </tr>
+  <tr>
     <td><a title="http://www.w3.org/ns/prov#used" href="#used" class="owlproperty">prov:used</a></td>
     <td>prov:wasUsedBy</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity" class="owlproperty">prov:hadActivity</a></td>
+    <td>prov:wasActivityOfInvolvement</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#involved" href="#involved" class="owlproperty">prov:involved</a></td>
+    <td>prov:wasInvolvedWith</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlproperty">prov:wasStartedBy</a></td>
+    <td>prov:started</td>
+  </tr>
+  <tr>
+    <td><a title="http://www.w3.org/ns/prov#wasStartedByActivity" href="#wasStartedByActivity" class="owlproperty">prov:wasStartedByActivity</a></td>
+    <td>prov:activityStarted</td>
   </tr>
 <table>
