--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -1,10 +1,50 @@
      <section id="description-qualified-terms">
        <h3>Qualified Terms</h3>
-       <p>The classes and properties in the Qualified terms category are for users who wish to provide additional details about the relationships between entities, activities, and agents. 
-          The terms in this category are the result of applying the <strong>Qualification Pattern</strong> to the simple relations available in the 
-          <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.
-      </p>
-      <p>For example, Figure 2 illustrates the classes and properties needed to fulfill the qualification pattern for the <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a> properties. While <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify <span class="repeated">prov:used</span> relations, <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the twelve other relations that can be qualified.
+       <p>The classes and properties in the Qualified terms category are for
+users who wish to provide additional details about the relationships between
+entities, activities, and agents.  The terms in this category are the result of
+applying the <strong>Qualification Pattern</strong> to the simple (unqualified)
+relations available in the <a
+href="#prov-starting-point-owl-terms-at-a-glance">Starting
+Point</a> and <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a>
+categories.  The Qualification Pattern consists of restating the unqualified
+relation by using an intermediate <em>involvement</em> class. In this
+document, each property that can be qualified has a <em>can be qualified
+with</em> header linking to the qualifying property and involvement class.
+In the PROV-O OWL these are indicated using the annotation property <span
+class="qname">prov:qualifiedForm</span>. The involvement class is a
+subclass of <a class="qname" href="#Involvement">prov:Involvement</a> which
+determines which property to link from the involvement to the unqualified object,
+that is either
+ <a class="qname" href="#entity">prov:entity</a>,
+ <a class="qname" href="#activity">prov:activity</a>,
+ <a class="qname" href="#agent">prov:agent</a> or
+ <a class="qname" href="#dictionary">prov:dictionary</a>.</p>
+<p>
+So for instance, if we have the unqualified statement:
+<pre class="example">
+:e1 prov:wasGeneratedBy :a1 .
+</pre>
+</p>
+<p>Then we find in PROV-O that <a class="qname" href="#wasGeneratedBy">prov:wasGeneratedBy</a> can be qualified with  
+the qualification property <a class="qname" href='#qualifiedGeneration'>prov:qualifiedGeneration</a> 
+and
+the involvement class <a class="qname" href='#Generation'>prov:Generation</a>, which is a subclass of <a class ="qname" href="#ActivityInvolvement">prov:ActivityInvolvement</a>. From this, we can restate the above relation using the <em>qualification pattern</em> as:
+</p>
+<pre class="example">
+:e1    prov:wasGeneratedBy :e1Gen .
+:e1Gen a                   prov:Generation ;
+       prov:entity         :a1 .
+</pre>
+<p>
+The asserter can thus attach additional properties to <code>:e1Gen</code> to
+describe the generation of <code>:e1</code>. To simplify client queries, any
+qualified relation SHOULD be accompanied by the equivalent unqualified
+statement. Unqualified properties SHOULD NOT have the equivalent qualified form
+asserted unless it adds additional information (for instance identifying the
+involvement).  </p>
+
+      <p>Figure 2 illustrates an example of the classes and properties needed to fulfill the qualification pattern for the <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a> properties. While <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify <span class="repeated">prov:used</span> relations, <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the twelve other relations that can be qualified.
       </p>
       <p>In the example, the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property, and references an instance of <span class="repeated">prov:Usage</span> that provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. In this case, the time that the Activity used the Entity is provided using the <span class="repeated">prov:atTime</span> property and a literal <span class="repeated">xsd:dateTime</span> value.
       </p>
