--- a/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
@@ -37,7 +37,7 @@ href="#qualifiedRemoval">prov:qualifiedRemoval</a></code> is used to specify
 that a given dictionary was obtained from an existing dictionary by
 <em>removing</em> a set of key-value pairs.  The example below specifies that
 the dictionary <code>:c1</code> was obtained from the empty dictionary
-<code>:c1</code> by <em>inserting</em> the key-value pairs <code>("k1",
+<code>:c</code> by <em>inserting</em> the key-value pairs <code>("k1",
 :e1)</code> and <code>("k2", :e2)</code>.  
 </p>
 
