--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -52,7 +52,8 @@ involvement).  </p>
       </p>
 
        <div style="text-align: center;" class="figure">
-            <img src="diagrams/Qualified-Association.png"
+            <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
+            <img src="prov-o-diagrams/Qualified-Association.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
             <div class="figcaption">Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</div>
