--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -15,7 +15,8 @@
       </p>
 
       <div style="text-align: center;" class="figure">
-            <img src="diagrams/Starting-points-terms.png"
+            <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
+            <img src="prov-o-diagrams/Starting-points-terms.png"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
             <div class="figcaption">Figure 1. The three Starting Point classes and the properties that relate them.</div>
