--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -43,8 +43,7 @@ Location??, hadLocation?, wasStartedByActivity?? specializationOf?
 		   
 		   <p>
 		   Agent <code>ex:derek</code>, acting again in behalf of the <code>ex:chartgenerators</code> organization, 
-		   publishes a post about his recent changes to the aggregated file (<code>ex:aggregatedByRegions</code>). He also provides the location for the crime file, so everyone knows the content he has been browsing, 
-		   and records the city where the publishing took place (Madrid). Since he is the one who started and ended the publishing activity (<code>ex:publicationActivity1123</code>), that information
+		   publishes a post about his recent changes to the aggregated file (<code>ex:aggregatedByRegions</code>). Since he is the one who started and ended the publishing activity (<code>ex:publicationActivity1123</code>), that information
 		   is recorded as well. The post produced by <code>ex:derek</code> (<code>ex:post9821</code>) includes a permanent link where the content of the latest version is shown
 		   (<code>ex:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>ex:postContent0</code>). Derek also adds additional metadata of the post, like the title.
 		   </p>
