pointer to qualification example

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -1,3 +1,4 @@
+<!-- incorporate https://dvcs.w3.org/hg/prov/rev/e3ecc51f4598 -->
      <section id="description-qualified-terms">
        <h3>Qualified Terms</h3>
        <p>The classes and properties in the Qualified terms category are for
