--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -54,10 +54,11 @@ involvement).  </p>
 
        <div style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
-            <img src="prov-o-diagrams/Qualified-Association.png"
-                 style="width: 50%; min-width: 25em; max-width: 60em" 
+            <!--img src="prov-o-diagrams/Qualified-Association.png"-->
+            <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/qualified-patterns.svg"
+                 style="width: 100%; min-width: 25em; max-width: 60em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <div class="figcaption">Figure 2. An illustration of the qualification pattern applied to the Starting Point properties <a class="qname" href="#used">prov:used</a> and <a class="qname" href="#wasAssociatedWith">prov:wasAssociatedWith</a>.</div>
+            <div class="figcaption">Figure 2. </div>
        </div>
 
       <p>The following two examples show the result of applying the Usage and Association patterns to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
