--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -16,7 +16,8 @@
 
       <div style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
-            <img src="prov-o-diagrams/Starting-points-terms.png"
+            <!--img src="prov-o-diagrams/Starting-points-terms.png"-->
+            <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/starting-points.svg"
                  style="width: 50%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
             <div class="figcaption">Figure 1. The three Starting Point classes and the properties that relate them.</div>
