added provo on diagram

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -61,10 +61,11 @@
         </div-->
 
 
-        <div class="exampleOuter">
+        <div about="#narrative-example-simple-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
            <p>The following PROV-O describes the resources involved when creating a chart about crime statistics. The example uses only Starting Point terms and serves as a basis for elaboration that will be described in subsequent sections. In the example, Derek performs an aggregation of some government crime data, grouping by national regions that are described in a separate dataset by a civil action group.
            </p> 
-           <pre class="example">{% include "includes/eg16-journalism-simple-without-comments.ttl" %}</pre>
+           <pre rel="prov:wasQuotedFrom" resource="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/khalid-jun-dropbox/eg16-journalism-simple-without-comments.ttl"
+                class="example">{% include "includes/eg16-journalism-simple-without-comments.ttl" %}</pre>
         </div>
 
       <p>The example states that the agent <code>ex:derek</code> was associated with two 
